# zero2prod

./: .env  Cargo.toml
.github/workflows/: general.yml
migrations/: 20230910152707_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
