[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
axum = "0.6.20"
config = "0.13.3"
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
tokio = {version = "1.32.0", features = ["full"]}

[dev-dependencies]
reqwest = "0.11.20"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
