[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = {version = "0.4.30", default-features = false, features = ["clock"]}
config = "0.13.3"
false = "0.0.0"
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
tokio = {version = "1.32.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version ="0.4.4", features = ["full"]}
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.20"
once_cell = "1.18.0"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
